# pra_star

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  readme.md
latex/: references.bib  report.tex
logs/create_maps/: bg512_AR0011SR.txt  bg512_AR0012SR.txt  bg512_AR0013SR.txt  bg512_AR0014SR.txt  bg512_AR0015SR.txt  bg512_AR0016SR.txt  bg512_AR0017SR.txt  bg512_AR0018SR.txt  bg512_AR0020SR.txt  bg512_AR0041SR.txt  bg512_AR0042SR.txt  bg512_AR0043SR.txt  bg512_AR0044SR.txt  bg512_AR0045SR.txt  bg512_AR0046SR.txt  bg512_AR0070SR.txt  bg512_AR0071SR.txt  bg512_AR0072SR.txt  bg512_AR0201SR.txt  bg512_AR0202SR.txt  bg512_AR0203SR.txt  bg512_AR0204SR.txt  bg512_AR0205SR.txt  bg512_AR0206SR.txt  bg512_AR0300SR.txt  bg512_AR0301SR.txt  bg512_AR0302SR.txt  bg512_AR0303SR.txt  bg512_AR0304SR.txt  bg512_AR0305SR.txt  bg512_AR0306SR.txt  bg512_AR0307SR.txt  bg512_AR0308SR.txt  bg512_AR0309SR.txt  bg512_AR0310SR.txt  bg512_AR0314SR.txt  bg512_AR0316SR.txt  bg512_AR0317SR.txt  bg512_AR0331SR.txt  bg512_AR0400SR.txt  (+71 more)
logs/run_algorithms/astar/: bg512_AR0011SR_0.txt  bg512_AR0012SR_0.txt  bg512_AR0013SR_0.txt  bg512_AR0014SR_0.txt  bg512_AR0015SR_0.txt  bg512_AR0016SR_0.txt  bg512_AR0017SR_0.txt  bg512_AR0018SR_0.txt  bg512_AR0020SR_0.txt  bg512_AR0041SR_0.txt  bg512_AR0042SR_0.txt  bg512_AR0043SR_0.txt  bg512_AR0044SR_0.txt  bg512_AR0045SR_0.txt  bg512_AR0046SR_0.txt  bg512_AR0070SR_0.txt  bg512_AR0071SR_0.txt  bg512_AR0072SR_0.txt  bg512_AR0201SR_0.txt  bg512_AR0202SR_0.txt  bg512_AR0203SR_0.txt  bg512_AR0204SR_0.txt  bg512_AR0205SR_0.txt  bg512_AR0206SR_0.txt  bg512_AR0300SR_0.txt  bg512_AR0301SR_0.txt  bg512_AR0302SR_0.txt  bg512_AR0303SR_0.txt  bg512_AR0304SR_0.txt  bg512_AR0305SR_0.txt  bg512_AR0306SR_0.txt  bg512_AR0307SR_0.txt  bg512_AR0308SR_0.txt  bg512_AR0309SR_0.txt  bg512_AR0310SR_0.txt  bg512_AR0314SR_0.txt  bg512_AR0316SR_0.txt  bg512_AR0317SR_0.txt  bg512_AR0331SR_0.txt  bg512_AR0400SR_0.txt  (+71 more)
logs/run_algorithms/pra/: bg512_AR0011SR_0.txt  bg512_AR0011SR_16.txt  bg512_AR0011SR_2.txt  bg512_AR0011SR_4.txt  bg512_AR0011SR_8.txt  bg512_AR0012SR_0.txt  bg512_AR0012SR_16.txt  bg512_AR0012SR_2.txt  bg512_AR0012SR_4.txt  (+546 more)
scripts/: create_graphs.py  generate_results_figure.py  run_algorithms.py  run_tests.sh
src/: CMakeLists.txt  create_graphs.cpp  run_multi.cpp  run_single.cpp
src/algorithm/: algorithm_runner.cpp  algorithm_runner.h  algorithm_types.h
src/algorithm/a_star/: a_star.cpp  a_star.h
src/algorithm/common/: graph.cpp  graph.h  graph_generator.cpp  graph_generator.h  graph_util.cpp  graph_util.h  search_output.h
src/algorithm/pra_star/: pra_star.cpp  pra_star.h
src/util/: file_util.cpp  file_util.h  map.cpp  map.h  priority_queue.h  scenario.cpp  scenario.h  timer.h
tests/: CMakeLists.txt  test_astar.cpp  test_cliques.cpp  test_graph_generator.cpp  test_hierarchical_graph.cpp  test_macros.h  test_scenario_loader.cpp
